--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -24,6 +24,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="start"
+                android:layout_marginStart="-5dp"
                 android:adjustViewBounds="true"
                 android:layout_alignParentStart="true"
                 android:src="@drawable/zz"
