--- a/app/src/main/res/menu/menu_plant.xml
+++ b/app/src/main/res/menu/menu_plant.xml
@@ -10,6 +10,10 @@
         android:title="@string/view_plants_history" />
 
     <item
+        android:id="@+id/menu_lifeAnimation"
+        android:title="@string/view_plants_life" />
+
+    <item
         android:id="@+id/menu_export"
         android:title="@string/export" />
 
