Curves finished. "Chick’s got an ass like an onion. Makes me wanna cry." ~ Hank Schrader

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,5 @@
     <color name="drieish">#f9e8ce</color>
 
     <color name="fertilizish">#994d0000</color>
+    <color name="transparent">#00000000</color>
 </resources>
