--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -163,7 +163,8 @@
                 android:id="@+id/curve_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp">
+                android:layout_margin="16dp"
+                app:cardCornerRadius="10dp">
 
                 <com.broooapps.graphview.CurveGraphView
                     android:id="@+id/fertilizing_curve_view"
