Change notifications' on-click action

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -20,6 +20,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"
             android:layout_margin="50dp"
+            android:scaleType="center"
+            app:fabCustomSize="100dp"
+            app:maxImageSize="40dp"
             android:onClick="takePhoto"
             android:src="@drawable/ic_photo"
             app:layout_constraintBottom_toBottomOf="parent"
