--- a/app/src/main/res/layout/activity_edit_plant.xml
+++ b/app/src/main/res/layout/activity_edit_plant.xml
@@ -163,7 +163,8 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp">
+            android:layout_margin="8dp"
+            android:visibility="gone">
 
             <TextView
                 style="@style/EditLabel"
